# llm-graph-kit

./: README.md  example_with_llm.py  example_with_schema.py  main.py  pyproject.toml  run_tests.py  setup.py  test_basic.py  test_coding_test_agent.py  test_llm_graph.py  test_novelist copy.py  test_novelist.py  test_workflow.py
llm_graph/: llm_graph.py
src/llm_graph_kit/: __init__.py  llm_graph copy 2.py  llm_graph copy.py  llm_graph.py
src/llm_graph_kit/gui/: __init__.py  __main__.py  builder.py  codegen.py  server.py
src/llm_graph_kit/gui/static/: app.js  index.html  style.css
tests/: demo_llm_agent.py  demo_llm_graph.py  test_builder.py  test_codegen.py  test_llm_graph.py  test_server.py
