[project]
name = "llm-graph-kit"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "augllm>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/ToPo-ToPo-ToPo/llm_graph"

[build-system]
requires = ["uv_build>=0.9.21,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
