[project]
name = "llm-graph-kit"
version = "1.1.2"
description = "LLM ベースのエージェントのワークフローをグラフ形式で記述・実行する軽量ライブラリ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/ToPo-ToPo-ToPo/llm-graph-kit"

[project.optional-dependencies]
gui = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
